# rogueworks

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: README-MDBOOK.md  book.toml
docs/src/: SUMMARY.md  architecture.md  contributing.md  design.md  diagnostics.md  intro.md  map_generators.md  map_testing.md  maps.md  maps_data_model.md  plugins.md  render_intents.md  resources_events.md  roadmap.md  stages.md  testing.md
examples/sandbox/src/: main.rs
rogueworks-adapters/ascii-bracket/: Cargo.toml
rogueworks-adapters/ascii-bracket/src/: lib.rs
rogueworks-adapters/headless/: Cargo.toml
rogueworks-adapters/headless/src/: lib.rs
rogueworks-adapters/web-yew/: Cargo.toml
rogueworks-adapters/web-yew/src/: lib.rs
rogueworks-cli/: Cargo.toml
rogueworks-cli/src/: main.rs
rogueworks-core/: Cargo.toml
rogueworks-core/src/: lib.rs
rogueworks-diagnostics/: Cargo.toml
rogueworks-diagnostics/src/: lib.rs
rogueworks-map/: Cargo.toml
rogueworks-map/src/: lib.rs
rogueworks-plugins/: Cargo.toml
rogueworks-plugins/ai-basics/: Cargo.toml
rogueworks-plugins/ai-basics/src/: lib.rs
rogueworks-plugins/fov/: Cargo.toml
rogueworks-plugins/fov/src/: lib.rs
rogueworks-plugins/interactions/: Cargo.toml
rogueworks-plugins/interactions/src/: lib.rs
rogueworks-plugins/movement/: Cargo.toml
rogueworks-plugins/movement/src/: lib.rs
rogueworks-plugins/src/: lib.rs
rogueworks-plugins/turn/: Cargo.toml
rogueworks-plugins/turn/src/: lib.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs
