[workspace]
members = [
  "rogueworks-core",
  "rogueworks-map",
  "rogueworks-plugins/movement",
  "rogueworks-plugins/interactions",
  "rogueworks-plugins/fov",
  "rogueworks-plugins/turn",
  "rogueworks-plugins/ai-basics",
  "rogueworks-adapters/headless",
  "rogueworks-adapters/ascii-bracket",
  "rogueworks-adapters/web-yew",
  "rogueworks-diagnostics",
  "rogueworks-cli",
  "sandbox"
]

resolver = "2"
